--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "dotenv": "^2.0.0",
     "react": "^15.6.2",
     "react-bootstrap": "^0.32.1",
-    "react-dom": "^15.6.2"
+    "react-dom": "^15.6.2",
+    "truffle-artifactor": "^3.0.5"
   },
   "scripts": {
     "start": "node scripts/start.js",
